tests/fail/func_nested.crema
def void foo()
{
  def void bar()
  {
    int a = 2
  }
  
  int a = 2
}
